--- a/src/App.css
+++ b/src/App.css
@@ -5,9 +5,15 @@
   font-style: normal;
 }
 .App {
-  
-   font-family: "JalnanGothic";
+  font-family: "JalnanGothic";
 }
+
+
+/* moim.js */
+#content {
+	min-height: 800px;
+}
+
 .btn-danger{
   --bs-btn-bg: #fff;
 }
@@ -16,7 +22,17 @@
   width: 19%;
   height : 45px;
 }
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/* app.js */
+#home_logo{
+  width: 100%;
+  margin :20% 0;
+  border-radius : .6rem;
 }
+#main_cate{
+  margin-top : 5%;
+  width :100%;
+  height : 100%;
+  background-color: red;
+}
+
