--- a/src/Component/Somoim/somoimcss.css
+++ b/src/Component/Somoim/somoimcss.css
@@ -18,7 +18,14 @@
 	height : 200px;
 }
 .somoim-input{
-	margin-top : 20px;
+	margin-top: 10px;
+	margin-bottom: 30px;
+	width : 100%;
+	height : 50px;
+}
+
+.fw-bold{
+	font-size:1.4rem;
 }
 .mb-5 {
 	margin-bottom: 20px;
