Design: 영역에 따른 사진 크기 조절

--- a/src/Component/member/MyCrew.css
+++ b/src/Component/member/MyCrew.css
@@ -9,12 +9,14 @@
 
 #photo-wrapper {
     flex: 1;/*사진이 왼쪽에 위치하게 함*/
+    height: 200px;
+    width:auto;
     overflow: hidden;
 }
 
 #photo-wrapper img {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 #crew-info {
