Design: 프로필 사진 테두리 안 보이도록 수정

--- a/src/Component/member/MyPage.css
+++ b/src/Component/member/MyPage.css
@@ -14,7 +14,7 @@
     border-radius: 70%;
     overflow: hidden;
     margin: auto;
-    border: 1px solid black;
+    /*border: 1px solid black;*/
 }
 
 #profile-upload-wrapper {
