Design: 네비게이션바에 보이는 프로필 사진 수정

--- a/src/Component/nav/Nav.css
+++ b/src/Component/nav/Nav.css
@@ -1,10 +1,10 @@
 #profile {
     margin-left: 20px;
     border-radius: 30px;
-    border: 1px solid black;
+    border: 1px solid white;
     width: 30px;
     height: 30px;
-    background-image: url(/public/img/emptyprofile.png);
+    /*background-image: url(/public/img/emptyspace.png);*/
     background-size: 30px;
     background-position: center
 }
