--- a/src/Component/guest/Login.css
+++ b/src/Component/guest/Login.css
@@ -3,3 +3,12 @@
     flex-direction: column; /*요소들 나열 방향*/
     align-items: flex-start; /*콘텐츠 아이템의 내부 상하관계 정렬*/
 }
+
+a {
+    color: black;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
